--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,93 +2,17 @@ version: "3.7"
 name: octan-pipeline-poc
 
 networks:
-  redpanda_network:
+  octan-pipeline-poc:
     driver: bridge
-volumes:
-  redpanda-0:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: /home/trmaphi/sources/pipeline/volumes/redpanda-0/var/lib/redpanda/data
-  
-  indexer-streaming:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: /home/trmaphi/sources/pipeline/volumes/indexer-streaming/ethereum-etl
-
 services:
-  redpanda-0:
-    command:
-      - redpanda
-      - start
-      - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
-      # Address the broker advertises to clients that connect to the Kafka API.
-      # Use the internal addresses to connect to the Redpanda brokers'
-      # from inside the same Docker network.
-      # Use the external addresses to connect to the Redpanda brokers'
-      # from outside the Docker network.
-      - --advertise-kafka-addr internal://redpanda-0:9092,external://localhost:19092
-      - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
-      # Address the broker advertises to clients that connect to the HTTP Proxy.
-      - --advertise-pandaproxy-addr internal://redpanda-0:8082,external://localhost:18082
-      - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
-      # Redpanda brokers use the RPC API to communicate with eachother internally.
-      - --rpc-addr redpanda-0:33145
-      - --advertise-rpc-addr redpanda-0:33145
-      # Tells Seastar (the framework Redpanda uses under the hood) to use 1 core on the system.
-      - --smp 1
-      # The amount of memory to make available to Redpanda.
-      - --memory 1G
-      # Mode dev-container uses well-known configuration properties for development in containers.
-      - --mode dev-container
-      # enable logs for debugging.
-      - --default-log-level=debug
-    image: docker.redpanda.com/redpandadata/redpanda:v23.1.3
-    container_name: redpanda-0
-    volumes:
-      - redpanda-0:/var/lib/redpanda/data
-    networks:
-      - redpanda_network
-    ports:
-      - 18081:18081
-      - 18082:18082
-      - 19092:19092
-      - 19644:9644
-  console:
-    container_name: redpanda-console
-    image: docker.redpanda.com/vectorized/console:v2.2.3
-    networks:
-      - redpanda_network
-    entrypoint: /bin/sh
-    command: -c 'echo "$$CONSOLE_CONFIG_FILE" > /tmp/config.yml; /app/console'
-    environment: 
-      CONFIG_FILEPATH: /tmp/config.yml
-      CONSOLE_CONFIG_FILE: |
-        kafka:
-          brokers: ["redpanda-0:9092"]
-          schemaRegistry:
-            enabled: true
-            urls: ["http://redpanda-0:8081"]
-        redpanda:
-          adminApi:
-            enabled: true
-            urls: ["http://redpanda-0:9644"]
-    ports:
-      - 8080:8080
-    depends_on:
-      - redpanda-0
-
   spark-iceberg:
-    image: tabulario/spark-iceberg
+    image: spark-iceberg
     container_name: spark-iceberg
-    build: spark/
+    build: docker/spark
     networks:
-      redpanda_network:
+      octan-pipeline-poc:
     depends_on:
-      - rest
+      - postgres
       - minio
     volumes:
       - ./warehouse:/home/iceberg/warehouse
@@ -102,14 +26,69 @@ services:
       - 8080:8080
       - 10000:10000
       - 10001:10001
-      
-  indexer-streaming:
-    container_name: indexer-streaming
-    image: ethereum-etl:latest
-    networks:
-      - redpanda_network
+
+  postgres:
+    container_name: postgres_container
+    image: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      PGDATA: /data/postgres
     volumes:
-      - indexer-streaming:/ethereum-etl/
-    command: stream -e contract,transaction,token_transfer --provider-uri http://52.220.158.144:8545 --start-block 10000000 --output=kafka/redpanda-0:9092
+       - ./postgres:/data/postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - octan-pipeline-poc
+    restart: unless-stopped
+
+  minio:
+    image: minio/minio
+    container_name: minio
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+      - MINIO_DOMAIN=minio
+    volumes:
+      - ./minio:/data
+    networks:
+      octan-pipeline-poc:
+        aliases:
+          - demo.minio
+          - bsc.minio
+    ports:
+      - 9001:9001
+      - 9000:9000
+    command: ["server", "/data", "--console-address", ":9001"]
+
+  mc:
     depends_on:
-      - redpanda-0
+      - minio
+    image: minio/mc
+    container_name: mc
+    networks:
+      octan-pipeline-poc:
+    environment:
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
+    entrypoint: >
+      /bin/sh -c "
+      until (/usr/bin/mc config host add minio http://minio:9000 admin password) do echo '...waiting...' && sleep 1; done;
+      /usr/bin/mc mb minio/bsc;
+      /usr/bin/mc policy set public minio/bsc;
+      /usr/bin/mc mb minio/demo;
+      /usr/bin/mc policy set public minio/demo;
+      tail -f /dev/null
+      "
+
+  # indexer-streaming:
+  #   container_name: indexer-streaming
+  #   image: ethereum-etl:latest
+  #   networks:
+  #     - redpanda_network
+  #   volumes:
+  #     - indexer-streaming:/ethereum-etl/
+  #   command: stream -e contract,transaction,token_transfer --provider-uri http://52.220.158.144:8545 --start-block 10000000 --output=kafka/redpanda-0:9092
+  #   depends_on:
+  #     - redpanda-0
