--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,30 +4,99 @@ name: octan-pipeline-poc
 networks:
   octan-pipeline-poc:
     driver: bridge
+    
 services:
-  spark-iceberg:
-    image: spark-iceberg
-    container_name: spark-iceberg
-    build: docker/spark-iceberg
+  mysql:
+    build: ./docker/mysql
+    image: mysql:latest
     networks:
       octan-pipeline-poc:
+        aliases:
+          - mysql
+    volumes:
+      - ./volumes/mysql:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=admin
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=admin
+      - MYSQL_DATABASE=metastore_db
+    ports:
+      - 3306:3306
+
+  minio:
+    image: minio/minio
+    networks:
+      octan-pipeline-poc:
+        aliases:
+          - minio
+          - metastore.minio
+          - warehouse.minio
+    volumes:
+      - ./volumes/minio:/data
+    ports:
+      - 9000:9000
+    environment:
+      - MINIO_ACCESS_KEY=accesskey
+      - MINIO_SECRET_KEY=secretkey
+    entrypoint: sh
+    command: -c 'mkdir -p /data/warehouse && mkdir -p /data/metastore && mkdir -p /data/logs && minio server /data'
+    deploy:
+      restart_policy:
+        condition: on-failure
+
+  hive-metastore:
+    build: ./docker/hive-metastore
+    image: hive-metastore:latest
+    networks:
+      octan-pipeline-poc:
+    ports:
+      - 9083:9083
+    environment:
+      - DATABASE_DRIVER=com.mysql.jdbc.Driver
+      - DATABASE_TYPE_JDBC=mysql
+      - DATABASE_HOST=mysql
+      - DATABASE_PORT=3306
+      - DATABASE_DB=metastore_db
+      - DATABASE_USER=admin
+      - DATABASE_PASSWORD=admin
+      - S3_BUCKET=metastore
+      - S3_PREFIX=/
+      - S3_ENDPOINT_URL=minio:9000
+      - AWS_ACCESS_KEY_ID=accesskey
+      - AWS_SECRET_ACCESS_KEY=secretkey
+    depends_on:
+      - minio
+      - mysql
+
+  spark-iceberg:
+    build: ./docker/spark-iceberg
+    image: spark-iceberg
+    networks:
+      octan-pipeline-poc:
+    depends_on:
+      - hive-metastore
+      - minio
     volumes:
       - ./warehouse:/home/iceberg/warehouse
       - ./notebooks:/home/iceberg/notebooks/notebooks
+    environment:
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=admin
+      - AWS_REGION=us-east-1
     ports:
       - 8888:8888
       - 8080:8080
       - 10000:10000
       - 10001:10001
 
-  exporter:
-    container_name: exporter
-    image: evm-etl
-    build: indexer/
-    depends_on:
-      - spark-iceberg
-    networks:
-      - octan-pipeline-poc
-    volumes:
-      - ./warehouse:/ethereumetl/warehouse
-    command: export_all -s 0 -e 5999 --provider-uri http://52.220.158.144:8545 -o /ethereumetl/warehouse
+  # exporter:
+  #   container_name: exporter
+  #   image: evm-etl
+  #   build: indexer/
+  #   depends_on:
+  #     - spark-iceberg
+  #   networks:
+  #     - octan-pipeline-poc
+  #   volumes:
+  #     - ./warehouse:/ethereumetl/warehouse
+  #   command: export_all -s 0 -e 5999 --provider-uri http://52.220.158.144:8545 -o /ethereumetl/warehouse
