feat: add graphframes for spark

--- a/docker/lighter/Dockerfile
+++ b/docker/lighter/Dockerfile
@@ -1,3 +1,6 @@
 FROM ghcr.io/exacaster/lighter:0.0.45-spark3.4.0
 
-RUN apt-get update && apt-get install -y procps && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y procps && \
+    rm -rf /var/cache/apt/* && \
+    rm -rf /var/lib/apt/lists/*
