feature: add batch indexing with k8s indexed job support

--- a/indexer/Dockerfile
+++ b/indexer/Dockerfile
@@ -1,5 +1,5 @@
-FROM python:3.7
-MAINTAINER Evgeny Medvedev <evge.medvedev@gmail.com>
+FROM python:3.9-alpine
+MAINTAINER Truong Ma Phi <trmaphi@gmail.com>
 ENV PROJECT_DIR=ethereum-etl
 
 RUN mkdir /$PROJECT_DIR
@@ -8,8 +8,7 @@ COPY . .
 RUN pip install --upgrade pip && pip install -e /$PROJECT_DIR/[streaming]
 
 # Add Tini
-ENV TINI_VERSION v0.18.0
-ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
-RUN chmod +x /tini
+RUN apk add --no-cache tini
 
-ENTRYPOINT ["/tini", "--", "python", "ethereumetl"]
+# Tini is now available at /sbin/tini
+ENTRYPOINT ["/sbin/tini", "--", "python", "ethereumetl"]
