--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ networks:
     driver: bridge
     
 services:
+
   mysql:
     build: ./docker/mysql
     image: mysql:latest
@@ -24,30 +25,6 @@ services:
       - 3306:3306
     healthcheck:
       test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
-      start_period: 5s
-      interval: 5s
-      timeout: 5s
-      retries: 55
-
-  minio:
-    image: minio/minio
-    networks:
-      octan-pipeline-poc:
-        aliases:
-          - minio
-          - metastore.minio
-          - warehouse.minio
-    volumes:
-      - ./volumes/minio:/data
-    ports:
-      - 9000:9000
-    environment:
-      - MINIO_ACCESS_KEY=accesskey
-      - MINIO_SECRET_KEY=secretkey
-    entrypoint: sh
-    command: -c 'mkdir -p /data/warehouse && mkdir -p /data/metastore && mkdir -p /data/logs && minio server /data'
-    healthcheck:
-      test: curl -I 127.0.0.1:9000/minio/health/live
       start_period: 5s
       interval: 5s
       timeout: 5s
@@ -81,35 +58,33 @@ services:
       mysql:
         condition: service_healthy
 
-  spark-iceberg:
-    build: ./docker/spark-iceberg
-    image: spark-iceberg
-    networks:
-      octan-pipeline-poc:
-    depends_on:
-      - hive-metastore
-      - minio
-    volumes:
-      - ./warehouse:/home/iceberg/warehouse
-      - ./notebooks:/home/iceberg/notebooks/notebooks
-    environment:
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=admin
-      - AWS_REGION=us-east-1
-    ports:
-      - 8888:8888
-      - 8080:8080
-      - 10000:10000
-      - 10001:10001
+#   spark-iceberg:
+#     build: ./docker/spark-iceberg
+#     image: spark-iceberg
+#     networks:
+#       octan-pipeline-poc:
+#     depends_on:
+#       - hive-metastore
+#       - minio
+#     volumes:
+#       - ./warehouse:/home/iceberg/warehouse
+#       - ./notebooks:/home/iceberg/notebooks/notebooks
+#     environment:
+#       - AWS_ACCESS_KEY_ID=admin
+#       - AWS_SECRET_ACCESS_KEY=admin
+#       - AWS_REGION=us-east-1
+#     ports:
+#       - 8888:8888
+#       - 8080:8080
+#       - 10000:10000
+#       - 10001:10001
 
-  # exporter:
-  #   container_name: exporter
-  #   image: evm-etl
-  #   build: indexer/
-  #   depends_on:
-  #     - spark-iceberg
-  #   networks:
-  #     - octan-pipeline-poc
-  #   volumes:
-  #     - ./warehouse:/ethereumetl/warehouse
-  #   command: export_all -s 0 -e 5999 --provider-uri http://52.220.158.144:8545 -o /ethereumetl/warehouse
+  exporter:
+    container_name: exporter
+    image: trmaphi/evm-indexer:0.0.2
+    build: indexer/
+    networks:
+      - octan-pipeline-poc
+    env_file:
+      - .env/exporter
+    command: export_all_indexed_job
