--- a/.github/workflows/upload-to-bucket.yml
+++ b/.github/workflows/upload-to-bucket.yml
@@ -16,5 +16,5 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: "/spark-jobs"
-          destination_dir: "/spark-jobs"
+          source_dir: "spark-jobs"
+          destination_dir: "spark-jobs"
