--- a/.github/workflows/upload-to-bucket.yml
+++ b/.github/workflows/upload-to-bucket.yml
@@ -4,17 +4,19 @@ on:
   push:
     branches:
       - main
-
 jobs:
-  upload:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: shallwefootball/s3-upload-action@master
-        name: Upload S3
-        id: S3
-        with:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: "spark-jobs"
-          destination_dir: "spark-jobs"
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'ap-southeast-1'   # optional: defaults to us-east-1
+        SOURCE_DIR: 'spark-jobs'      # optional: defaults to entire repository
+        DESTINATION_DIR: 'spark-jobs'
+
