build: update upload-to-bucket.yml

--- a/.github/workflows/upload-to-bucket.yml
+++ b/.github/workflows/upload-to-bucket.yml
@@ -10,13 +10,11 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read --follow-symlinks --delete
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ap-southeast-1'   # optional: defaults to us-east-1
-        SOURCE_DIR: 'spark-jobs'      # optional: defaults to entire repository
-        DESTINATION_DIR: 'spark-jobs'
+        SOURCE_DIR: '/spark-jobs'      # optional: defaults to entire repository
+        DEST_DIR: '/jobs'
 
