--- a/.github/workflows/upload-to-bucket.yml
+++ b/.github/workflows/upload-to-bucket.yml
@@ -15,6 +15,6 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ap-southeast-1'   # optional: defaults to us-east-1
-        SOURCE_DIR: '/spark-jobs'      # optional: defaults to entire repository
-        DEST_DIR: '/jobs'
+        SOURCE_DIR: 'spark-jobs'      # optional: defaults to entire repository
+        DEST_DIR: 'jobs'
 
