chore: clear up some deprecated

--- a/assets/driver_pod_template.yml
+++ b/assets/driver_pod_template.yml
@@ -18,7 +18,7 @@ kind: Pod
 metadata:
   labels:
     spark-role: driver
-  namespace: spark-jobs
+  namespace: spark
 spec:
   serviceAccountName: spark
   affinity: 
