--- a/assets/executor_pod_template.yml
+++ b/assets/executor_pod_template.yml
@@ -18,7 +18,7 @@ kind: Pod
 metadata:
   labels:
     spark-role: executor
-  namespace: spark-jobs
+  namespace: spark
 spec:
   serviceAccountName: spark
   affinity: 
