--- a/cmc-crawl/package.json
+++ b/cmc-crawl/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "get-cmc-historical-price-top-1000.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node get-cmc-historical-price-top-1000.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1415.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1"
   }
