update get top cmc from s3

--- a/cmc-crawl/.env.example
+++ b/cmc-crawl/.env.example
@@ -1,6 +1,7 @@
 START_TIME=1689373873
 END_TIME=1689560769
-AWS_S3_BUCKET=my-bucket
+AWS_S3_BUCKET_HISTORICAL=historical
+AWS_S3_BUCKET_TOP_CMC=top-cmc
 S3_REGION=ap-southeast-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
