--- a/cmc-crawl/docker-compose.yaml
+++ b/cmc-crawl/docker-compose.yaml
@@ -1,13 +1,17 @@
-# docker-compose.yml
 version: "3.8"
 
 services:
+  top_cmc:
+    build:
+      context: .
+      dockerfile: top-cmc.Dockerfile
+    image: octanlabs/top-cmc-crawl:latest
+    env_file: ./.env
+    command: npm run top_cmc
   cmc_historical_crawl:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: historical.Dockerfile
     image: octanlabs/cmc-historical-crawl:latest
     env_file: ./.env
-    volumes:
-      - ./:/cmc-crawl
-    command: npm start
+    command: npm run historical
