--- a/cmc-crawl/package.json
+++ b/cmc-crawl/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "get-cmc-historical-price.js",
 	"scripts": {
-		"start": "node get-cmc-historical-price.js"
+		"top_cmc": "node get-top-cmc.js",
+		"historical": "node get-cmc-historical-price.js"
 	},
 	"author": "",
 	"license": "ISC",
