--- a/cmc-crawl/.env.example
+++ b/cmc-crawl/.env.example
@@ -1,7 +1,7 @@
-START_TIME=1689373873
-END_TIME=1689560769
-AWS_S3_BUCKET_HISTORICAL=historical
-AWS_S3_BUCKET_TOP_CMC=top-cmc
+START_DATE=2023-07-19
+END_DATE=2023-07-19
+AWS_S3_BUCKET_HISTORICAL=octan-labs-bsc/cmc_historicals
+AWS_S3_BUCKET_TOP_CMC=octan-labs-bsc/top-cmc
 S3_REGION=ap-southeast-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
