build: error on spark running non sts nodes

--- a/assets/driver_pod_template.yml
+++ b/assets/driver_pod_template.yml
@@ -30,3 +30,8 @@ spec:
                 operator: In 
                 values: 
                 - ON_DEMAND
+              - key: 'noderole' 
+                operator: In 
+                values: 
+                - spark
+  
