--- a/docker/cmc-crawl/.env.example
+++ b/docker/cmc-crawl/.env.example
@@ -1,7 +1,7 @@
 START_DATE=2023-07-19
 END_DATE=2023-07-19
-AWS_S3_BUCKET_HISTORICAL=octan-labs-bsc/cmc_historicals
-AWS_S3_BUCKET_TOP_CMC=octan-labs-bsc/top-cmc
+AWS_S3_BUCKET_HISTORICAL=
+AWS_S3_BUCKET_TOP_CMC=
 S3_REGION=ap-southeast-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
