--- a/assets/driver_pod_template.yml
+++ b/assets/driver_pod_template.yml
@@ -30,8 +30,8 @@ spec:
                 operator: In 
                 values: 
                 - ON_DEMAND
-              - key: 'noderole' 
+              - key: 'topology.kubernetes.io/zone' 
                 operator: In 
                 values: 
-                - spark
+                - ap-southeast-1b
   
