--- a/assets/executor_pod_template.yml
+++ b/assets/executor_pod_template.yml
@@ -30,7 +30,7 @@ spec:
                 operator: In 
                 values: 
                 - SPOT
-              - key: 'noderole' 
+              - key: 'topology.kubernetes.io/zone' 
                 operator: In 
                 values: 
-                - spark
+                - ap-southeast-1b
